--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
     useBuiltin = false 
 [delta]
     navigate = true    # use n and N to move between diff sections
+    side-by-side = true
 [merge]
     conflictstyle = diff3
 
